--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node index.js"
+    "start": "node index.js"
   },
   "author": "mohammed",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "d3-random": "^3.0.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
@@ -32,5 +33,4 @@
   "engines": {
     "node": "18.x"
   }
-  
 }
